--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <h2>I am Bena,and today i am developing my first website</h2>
     <h3>I am so excited because this maarks the beginiing of my skills in software and website development</h3>
     <h4>I welcome any feddback,comments to help me a better website developer</h4>
-    <p>I am so glad and excited to be part of the code queen famiy.I know i am going to learn new skills that will help me advance my career</p>
-    <p>I am going to share my goals and aspirations .I welcome any carrer guidance to help me become better</p>
+    <p>I am so glad and excited to be part of the code queen famiy.I know i am going to learn new skills that will help me advance my career</b></p>
+    <p><b> I am going to share my goals and aspirations .<br> welcome any carrer guidance to help me become better</p>
   <ul>
 <li>Data scientist</li>
 <li>Health informatics</li>
@@ -22,5 +22,90 @@
     <li>Private organisations</li>
 </ol>
  </ul>
+<img src="IMAGES/image.jpg" alt="Ministry of Health" height="150px" width="150px">
+<a href="https://www.linkedin.com/in/kemigisha-benadine-94b5aa151/" target="_blank">Click to go to my linkedin account</a>
+
+<table border="5">
+<h1>STUDENTS DETAILS</h1>
+    <tr>
+        <th>NAME</th>
+        <th>AGE</th>
+        <th>REG NO</th>
+        <th>SUBJECTS</th>
+        <th>ADRESS</th>
+        <th>GENDER</th>
+    </tr>
+    <tr>
+        <td>Kemigisha Benadine </td>
+        <td>26</td>
+        <td>190080/3196</td>
+        <td>
+            <ol>
+                <li>Mathematics</li>
+                <li>Physics</li>
+                <li>Biology</li>
+            </ol>
+        </td>
+        <td>Kisaasi</td>
+        <td>Female</td>
+        <tr>
+            <td>Ashaba Arnold</td>
+            <td>20</td>
+            <td>190080/3982</td>
+            <td>
+                <ul>
+                    <li>History</li>
+                    <li>CRE</li>
+                    <li>Geography</li>
+                </ul>
+            </td>
+            <td>Kabale</td>
+            <td>Male</td>
+        </tr>
+        <tr>
+            <td>Annet Arinaitwe</td>
+            <td>24</td>
+            <td>190080/3452</td>
+            <td>
+                <ol>
+                    <li>Pysics</li>
+                    <li>Computer</li>
+                    <li>Biology</li>
+                </ol>
+            </td>
+            <td>Mbarara</td>
+            <td>Female</td>
+        </tr>
+
+    </tr>
+    
+</table><br><br>
+
+<form>
+<label for="first name">FIRST NAME</label>
+<input type="text" placeholder="enter name"><br><br><br>
+<label for="second name">SECOND NAME</label>
+<input type="text" placeholder="enter name"><br><br><br>
+<label for="Date">DATE</label>
+<input type="date" placeholder="enter date"><br><br><br>
+<label for="Gender">FEMALE</label>
+<input type="radio" name="Gender" value="FEMALE">
+<label for="Gender">MALE</label>
+<input type="radio" name="Gender" value="MALE"><br><br><br>
+<label for="Payements">Payments</label>
+<select>
+    <option value="Visa">Visa</option>
+    <option value="Mastercard">Mastercard</option>
+    <option value="Giftcard">Giftcard</option>
+</select>
+
+
+</form>
+
+
+
+
+
+
  </body>
 </html>
