Added a style.css file

--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- <style>
+            h3{
+                color: aqua;
+                background-color: brown;
+                font-size: large;
+            }
+
+        </style> -->
         <title>My first website</title>
+        <link rel="stylesheet" href="style.css"
     </head>
  <body>
-    <h1>HELLO WORLD!</h1>
+    <!-- This is the body of my website -->
+    <h1 style="color: blue;">HELLO WORLD!</h1>
     <h2>I am Bena,and today i am developing my first website</h2>
     <h3>I am so excited because this maarks the beginiing of my skills in software and website development</h3>
     <h4>I welcome any feddback,comments to help me a better website developer</h4>
-    <p>I am so glad and excited to be part of the code queen famiy.I know i am going to learn new skills that will help me advance my career</b></p>
+    <p style="background-color:brown;color: white;">I am so glad and excited to be part of the code queen famiy.I know i am going to learn new skills that will help me advance my career</b></p>
     <p><b> I am going to share my goals and aspirations .<br> welcome any carrer guidance to help me become better</p>
   <ul>
 <li>Data scientist</li>
@@ -97,6 +107,7 @@
     <option value="Visa">Visa</option>
     <option value="Mastercard">Mastercard</option>
     <option value="Giftcard">Giftcard</option>
+    <option value="Mobile Money">Mobile Money</option>
 </select>
 
 
