Addition on CSS

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <p style="background-color:brown;color: white;">I am so glad and excited to be part of the code queen famiy.I know i am going to learn new skills that will help me advance my career</b></p>
     <p><b> I am going to share my goals and aspirations .<br> welcome any carrer guidance to help me become better</p>
   <ul>
-<li>Data scientist</li>
+<li class="Carrer"> Data scientist</li>
 <li>Health informatics</li>
 <li>Statictician</li>
-<li>Monitoring and evaluation specialist</li>
-<ol>
+<li>Monitoring and evaluation specialist</li><br>
+<ol class="organisations">
  <h3> i want to work in the following sectors</h3>
     <li>NGOS</li>
     <li>Government</li>
