--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <h2>I am Bena,and today i am developing my first website</h2>
     <h3>I am so excited because this maarks the beginiing of my skills in software and website development</h3>
     <h4>I welcome any feddback,comments to help me a better website developer</h4>
+    <p id="sample-text">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit.<br>
+         Facere accusantium temporibus adipisci asperiores aperiam rerum itaque iste? Soluta, iste.<br>
+          Exercitationem ad eum accusamus earum omnis eaque quae vero aliquam. Error.</p><br>
     <p style="background-color:brown;color: white;">I am so glad and excited to be part of the code queen famiy.I know i am going to learn new skills that will help me advance my career</b></p>
     <p><b> I am going to share my goals and aspirations .<br> welcome any carrer guidance to help me become better</p>
   <ul>
@@ -35,6 +39,11 @@
 <img src="IMAGES/image.jpg" alt="Ministry of Health" height="150px" width="150px">
 <a href="https://www.linkedin.com/in/kemigisha-benadine-94b5aa151/" target="_blank">Click to go to my linkedin account</a>
 
+<p class="first">
+    The most important thing isto identify where the margin,the padding ,how they 
+    look like in the elements
+</p>
+<p class="first">I am studying css</p>
 <table border="5">
 <h1>STUDENTS DETAILS</h1>
     <tr>
