More of flexi box

--- a/sample.html
+++ b/sample.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flex Box</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 <div class="container">
@@ -15,6 +16,22 @@
         <div>icon</div>
         <div>menue</div>
     </div>
+    <!-- Blue Container -->
+    <div class="Bluecontainer">
+        <div class="flexitems">Item 1</div>
+        <div class="flexitems" >Item 2</div>
+
+        <div class="flexitems">Item 3</div>
+        <div class="flexitems">Item 4</div>
+    </div>
+    <i class="fa-brands fa-instagram mine"></i>
+    <i class="fa-brands fa-tiktok"></i>
+    <i class="fa-brands fa-facebook"></i>
+    <!-- Bottom container -->
+     <div class="last">
+        <img src="IMAGES/profile.jpg" alt="">
+     </div>
+
 </div>
 
     
