--- a/sample.html
+++ b/sample.html
@@ -29,7 +29,7 @@
     <i class="fa-brands fa-facebook"></i>
     <!-- Bottom container -->
      <div class="last">
-        <img src="IMAGES/profile.jpg" alt="">
+        <img src="IMAGES/profile.jpg" alt="" class="myimage">
      </div>
 
 </div>
